# structure

./: .gitignore  .travis.yml  Pipfile  Procfile  README.md  pyproject.toml  requirements.txt
.mypy_cache/3.6/: _importlib_modulespec.meta.json  abc.meta.json  base64.data.json  base64.meta.json  builtins.meta.json  codecs.meta.json  datetime.meta.json  enum.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  socket.meta.json  ssl.meta.json  string.meta.json  sys.meta.json  threading.meta.json  time.meta.json  types.meta.json  typing.meta.json
.mypy_cache/3.6/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.6/dashboard/: __init__.data.json  __init__.meta.json  tests.data.json  tests.meta.json
.mypy_cache/3.6/email/: __init__.meta.json  charset.meta.json  contentmanager.meta.json  errors.meta.json  header.meta.json  message.meta.json  policy.meta.json
.mypy_cache/3.6/http/: __init__.meta.json  client.meta.json  (+1 more)
docs/: README.md
mobile_app/: App.js  package-lock.json  package.json
mobile_app/.expo/: packager-info.json
server/: .gitignore
structure/: manage.py  scraper.py
structure/api/: urls.py  views.py
structure/dashboard/: models.py  views.py
structure/structure/: settings.py  urls.py  wsgi.py
structure_server/: manage.py
structure_server/api/: views.py
structure_server/dashboard/: auth.py  models.py  scraper.py  test  urls.py  views.py
structure_server/static/: index.html
structure_server/structure_server/: settings.py  urls.py  wsgi.py
structure_server/test_endpoint/: test_page
write_up/: README.md
(+44 files in other folders)
