[tool.poetry]
name = "structure"
version = "0.1.0"
description = "A study session and performance analysis system for Loreto students."
authors = ["Jeremiah Boby <mail@jeremiahboby.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "4.2b1"
django = "^2.1"
psycopg2-binary = "^2.7"
dj-database-url = "^0.5.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
